hphp/hack/test/typecheck/reactive/print_in_rx9.php.exp
File "print_in_rx9.php", line 8, characters 3-6:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "print_in_rx9.php", line 4, characters 8-53:
  This function is normal.
